# prop-firm-scalp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  telegram_bot.py
app/analytics/: __init__.py  backtest.py  stats.py
app/api/: __init__.py  app.py
app/api/routes/: health.py  market.py  risk.py  settings.py  signals.py  stats.py  status.py  (+1 more)
app/backtesting/: runner.py
app/broker/: __init__.py  base.py  paper.py  tradelocker.py
app/config/: __init__.py  settings.py
app/engine/: __init__.py  orchestrator.py
app/execution/: __init__.py  executor.py
app/journal/: __init__.py  models.py  repository.py
app/market/: rest_poller.py
app/models/: __init__.py  candle.py  order.py  signal.py  trade.py
app/notifications/: __init__.py  base.py  discord.py  telegram.py
app/risk/: __init__.py  manager.py
app/strategy/: __init__.py  base.py  candles.py  confluence.py  market_structure.py  scalp_smc.py
app/utils/: __init__.py  instruments.py  logging.py  sessions.py  time.py
app/websocket/: __init__.py  client.py
docker/: .dockerignore  docker-compose.paper.yml  prop-firm-scalp.service
scripts/: __init__.py  debug_signals.py  gen_synthetic_v3.py  gen_synthetic_v4.py  gen_synthetic_v5.py  generate_sample_data.py  run_backtest.py  run_bt.py  run_live.py
tests/: __init__.py  conftest.py  test_candle_model.py  test_instruments.py  test_market_structure.py  test_paper_broker.py  test_risk_manager.py  test_sessions.py  test_signal_model.py
(+3 files in other folders)
