[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prop-firm-scalp"
version = "0.1.0"
description = "Production-grade async scalping bot for prop-firm forex trading via TradeLocker."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "prop-firm-scalp contributors" }]
dependencies = [
  "httpx>=0.27",
  "websockets>=12.0",
  "polars>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-json-logger>=2.0",
  "tenacity>=8.3",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "redis>=5.0",
  "python-telegram-bot>=21.0",
  "PyJWT>=2.8",
  "orjson>=3.10",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "freezegun>=1.5",
]

[project.scripts]
pfs-live = "scripts.run_live:main"
pfs-backtest = "scripts.run_backtest:main"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
